fixed white space at bottom of screen

--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,6 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: hsl(216, 53%, 9%);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
